# TransactionCoordinator

./: .env.example  .gitignore  CLAUDE.md  agent_review_overlay.yaml  document_validation.yaml  generate_annotated_pdfs.py  generate_filled_test_docs.py  pyproject.toml  regenerate_testing_contracts.py  simulate_100_scenarios.py  tc
workflow/: .env.example  .gitignore  API_SETUP.txt  CLAUDE.md  agent_verification_gates.yaml  deadlines.yaml  legal_update_process.yaml  phases.yaml  pyproject.toml  tc-tmux
workflow/aicontext_log/: v001_2026-02-01_initial-build.md  v002_2026-02-01_tested-and-working.md  v003_2026-02-01_forms-and-phases.md  v004_2026-02-01_full-feature-set.md
workflow/completions/: _tc
workflow/doc_manifests/: _summary.yaml  _versions.yaml
workflow/doc_manifests/Commercial and Residential Income listing agreement package/: Addendum_to_Commercial__Residential_Income_Listing_Agreement_-_925_ts51552.yaml  Affiliated_Business_Arrangement_Disclosure_Statement_-_321_ts51552.yaml  Commercial_and_Residential_Income_Listing_Agreement_-_1225_ts51552.yaml  Disclosure_Information_Advisory_-_1225_ts51552.yaml  Fire_Hardening_and_Defensible_Space_Advisory_Disclosure_and_Addendum_-_625_ts53115.yaml  Market_Conditions_Advisory_-_624_ts53115.yaml
workflow/forms/: ad.yaml  avid.yaml  cr1.yaml  nhd.yaml  rpa.yaml  spq.yaml  tds.yaml
workflow/tc/: cli.py  db.py  rules.py
workflow/tcli/: __init__.py  cli.py  db.py  doc_analyzer.py  doc_versions.py  engine.py  integrations.py  notify.py  overlay.py  rules.py  web.py
workflow/tcli/sandbox/: __main__.py  fixtures.py  (+3 more)
(+244 files in other folders)
